z-index of header in mobile fixed

--- a/css/app.css
+++ b/css/app.css
@@ -75,15 +75,9 @@ li a:hover {
 .web_logo {
     width: 64px;
 }
-
-/*
 .title-bar {
-    position: fixed;
-    width: 100%;
-    transition: 0.5s;
+    z-index: 50;
 }
-*/
-
 
 /************************************************************************************ 
                HERO
